posiGen_FullsendBox/src/objects/QBUse_Cases__c.object
<CustomObject>
    <description>Created by the Cloud Converter from http://ModelMetrics.com</description>
    <fields>
        <fullName>AlternateNormalFlow__c</fullName>
        <label>Alternate Normal Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assumptions__c</fullName>
        <label>Assumptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessRules__c</fullName>
        <label>Business Rules</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExceptionFlow__c</fullName>
        <label>Exception Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MainActor__c</fullName>
        <label>Main Actor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NormalFlow__c</fullName>
        <label>Normal Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OutlineNumber__c</fullName>
        <label>Outline Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OwningDepartment__c</fullName>
        <label>Owning Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostConditions__c</fullName>
        <label>Post Conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preconditions__c</fullName>
        <label>Preconditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TriggeringEvent__c</fullName>
        <label>Triggering Event</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>QBUse_Cases</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>QBUse_Cases Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QBUse_Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>